# opencv-raw

./: .gitignore  README.md  opencv-raw.cabal  setup.sh
OpenCVRaw/: CapFile.hsc  Consts.hsc  CppTypes.hsc  Extras.hsc  Funcs.hsc  Mat.hsc  RawConsts.hsc  RawFuncs.hsc  RawTypes.hsc  Types.hsc
cbits/: capture_from_file.cpp  capture_from_file.hpp  genc.py  genhsc.py  hdr_parser.py  mat.cpp  mat.hpp
