name:                opencv-raw
version:             0.1.0.0
synopsis:            Raw Haskell bindings to OpenCV >= 2.0
homepage:            www.github.com/arjuncomar/opencv-raw.git
license:             BSD3
license-file:        LICENSE
author:              Arjun Comar
maintainer:          nrujac@gmail.com
category:            AI, Machine Vision
build-type:          Custom
cabal-version:       >=1.10

source-repository head
    type: git
    location: git://github.com/arjuncomar/opencv-raw.git

library
    include-dirs:           cbits/
    includes:               cbits/opencv_generated.hpp
                          , cbits/cpptypes.hpp
                          , cbits/mat.hpp
                          , cbits/capture_from_file.h
    c-sources:              cbits/opencv_generated.cpp
                          , cbits/cpptypes.cpp
                          , cbits/mat.cpp
                          , cbits/capture_from_file.cpp
    cc-options:             -fpermissive -O3
    if arch(x86_64)
      cc-options:             -fpermissive -O3 -DPRIuMAX="lu" -DPRIdMAX="ld"
    if arch(i386)
      cc-options:             -fpermissive -O3 -DPRIuMAX="llu" -DPRIdMAX="lld"
    ghc-options:            -pgml g++ -O2
    exposed-modules:        OpenCVRaw.Types
                          , OpenCVRaw.Consts
                          , OpenCVRaw.Funcs
                          , OpenCVRaw.CppTypes
                          , OpenCVRaw.Mat
                          , OpenCVRaw.Point
                          , OpenCVRaw.CapFile
    pkgconfig-depends:      opencv
    build-depends:          base >=4.6 && <4.7
                          , bindings-DSL >= 1.0.17 && <= 1.1
                          , Cabal >=1.16
    default-language:       Haskell2010
